--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,6 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/login_as_gust"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_textview_bg"
+            android:padding="@dimen/padding_7"
+            android:text="@string/skip"
+            android:textColor="@color/white"
+            style="@style/TextAppearance.Material3.LabelLarge"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/font_size_20"
+            app:layout_constraintTop_toTopOf="@+id/background_login"
+        />
+
 
         <ImageView
             android:id="@+id/background_login"
@@ -19,10 +33,9 @@
             android:scaleType="center"
             android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/email_p"
