--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,6 +13,7 @@
         <item name="colorOnSecondary">@color/md_theme_dark_onSecondary</item>
         <item name="colorOnSecondaryContainer">@color/md_theme_dark_onSecondaryContainer</item>
         <item name="android:drawableTint">@color/md_theme_dark_onBackground_opacity</item>
+        <item name="colorAccent">@color/back_text_dark</item>
 
         <item name="backgroundColor">@color/md_theme_dark_background</item>
 
