--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -76,7 +76,7 @@
         tools:text="sdfsdfsdfds" />
 
     <TextView
-        android:id="@+id/category_single_meal"
+        android:id="@+id/country_single_meal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_16"
@@ -111,7 +111,7 @@
         android:weightSum="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/category_single_meal"
+        app:layout_constraintTop_toBottomOf="@id/country_single_meal"
         app:selectionRequired="true"
         app:singleSelection="true">
 
