--- a/app/src/main/res/layout/head_of_home.xml
+++ b/app/src/main/res/layout/head_of_home.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/log_out"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_16"
+        android:src="@drawable/log_out"
+        app:layout_constraintBottom_toBottomOf="@+id/meal_of_day"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/meal_of_day" />
 
     <TextView
         android:id="@+id/meal_of_day"
+        style="@style/TextAppearance.Material3.TitleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/margin_16"
         android:layout_marginStart="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_16"
         android:text="@string/meal_of_day"
-        style="@style/TextAppearance.Material3.TitleLarge"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
         />
+
     <androidx.cardview.widget.CardView
-        app:layout_constraintTop_toBottomOf="@+id/meal_of_day"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/card_meal_of_day"
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_170"
-        android:layout_marginTop="@dimen/margin_16"
         android:layout_marginHorizontal="@dimen/margin_16"
-        app:cardCornerRadius="@dimen/radius_16">
+        android:layout_marginTop="@dimen/margin_16"
+        app:cardCornerRadius="@dimen/radius_16"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meal_of_day">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/card_category"
@@ -37,41 +49,42 @@
                 android:id="@+id/img_meal_day"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:scaleType="centerCrop"
-                tools:src="@drawable/ic_launcher_background"/>
+                tools:src="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/name_meal_day"
                 android:layout_width="@dimen/width_0"
                 android:layout_height="wrap_content"
-                android:textAlignment="textStart"
+                android:background="@color/back_text"
                 android:ellipsize="middle"
                 android:maxLines="1"
                 android:paddingStart="@dimen/margin_16"
-                android:background="@color/back_text"
+                android:textAlignment="textStart"
                 android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/country_meal_day"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/card_category"
                 tools:text="Black Bean Burrito" />
+
             <TextView
                 android:id="@+id/country_meal_day"
                 android:layout_width="@dimen/width_0"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
                 android:background="#A0001E2C"
+                android:paddingStart="@dimen/margin_16"
                 android:paddingTop="@dimen/margin_4"
                 android:paddingBottom="@dimen/margin_8"
-                android:paddingStart="@dimen/margin_16"
-                app:layout_constraintEnd_toEndOf="parent"
-
                 android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
+                android:textColor="@color/white"
+
                 app:layout_constraintBottom_toBottomOf="@id/card_category"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/card_category"
                 tools:text="Mexican" />
         </androidx.constraintlayout.widget.ConstraintLayout>
