--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -32,4 +32,28 @@
         app:layout_constraintTop_toBottomOf="@+id/tile_of_list_favourite"
         />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_animation_favourite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:lottie_rawRes="@raw/no_favorite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tile_of_list_favourite"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+    <TextView
+        android:id="@+id/no_favorite_Text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/lottie_animation_favourite"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/no_favorites"
+        android:textAlignment="center"
+        style="@style/TextAppearance.Material3.TitleLarge"
+        app:layout_constraintEnd_toEndOf="parent"
+
+     />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
