--- a/app/src/main/res/navigation/nav_grav.xml
+++ b/app/src/main/res/navigation/nav_grav.xml
@@ -103,7 +103,9 @@
             app:destination="@id/singUpFragment" />
         <action
             android:id="@+id/action_loginFragment_to_homeF"
-            app:destination="@id/homeF" />
+            app:destination="@id/homeF"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/singUpFragment"
