--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,7 +23,7 @@
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/facebook_register" />
+            app:layout_constraintTop_toBottomOf="@+id/google_login" />
 
         <ImageView
             android:id="@+id/background_login"
@@ -118,27 +118,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/go_to_register" />
 
-        <ImageView
-            android:id="@+id/facebook_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/facebook"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/google_login"
-            app:layout_constraintHorizontal_bias=".8"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/or"
-            app:layout_constraintVertical_bias=".1" />
+<!--        <ImageView-->
+<!--            android:id="@+id/facebook_register"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/facebook"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/google_login"-->
+<!--            app:layout_constraintHorizontal_bias=".8"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/or"-->
+<!--            app:layout_constraintVertical_bias=".1" />-->
 
         <ImageView
             android:id="@+id/google_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/google"
-            app:layout_constraintBottom_toBottomOf="@+id/facebook_register"
+            android:layout_marginVertical="@dimen/margin_8"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.59"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/facebook_register" />
+            app:layout_constraintTop_toBottomOf="@+id/or" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
