--- a/app/src/main/res/drawable/rounded_textview_bg.xml
+++ b/app/src/main/res/drawable/rounded_textview_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?attr/colorAccent" /> <!-- Background color -->
-    <corners android:radius="@dimen/radius_16" /> <!-- Radius in dp (adjust as needed) -->
+    <solid android:color="?attr/colorAccent" />
+    <corners android:radius="16dp" />
 </shape>
